[MOD]modify alias.env which can read default name file

--- a/alias.env
+++ b/alias.env
@@ -1,37 +1,58 @@
-alias yangfei='cd /mnt/self-define/yangfei'
-alias chensheng='cd /mnt/self-define/chensheng'
-alias wangluping='cd /mnt/self-define/wangluping'
-alias tangnana='cd /mnt/self-define/tangnana'
-alias zhangyi='cd /mnt/self-define/zhangyi'
-alias cuixin='cd /mnt/self-define/cuixin'
-alias fengjiasun='cd /mnt/self-define/fengjiasun'
-alias wangxizhi='cd /mnt/self-define/wangxizhi'
-alias chenqun='cd /mnt/self-define/chenqun'
-alias wangyuanyuan='cd /mnt/self-define/wangyuanyuan'
-alias wangyuyang='cd /mnt/self-define/wangyuyang'
-alias jianglinnan='cd /mnt/self-define/jianglinnan'
-alias cairunze='cd /mnt/self-define/cairunze'
-alias sunmou='cd /mnt/self-define/sunmou'
-alias zhangweixing='cd /mnt/self-define/zhangweixing'
-alias shenyichong='cd /mnt/self-define/shenyichong'
-alias tangzhe='cd /mnt/self-define/tangzhe'
-alias fukejie='cd /mnt/self-define/fukejie'
-alias huangjunhao='cd /mnt/self-define/huangjunhao'
-alias panshu='cd /mnt/self-define/panshu'
-alias dengqiuliang='cd /mnt/self-define/dengqiuliang'
-alias dongjie='cd /mnt/self-define/dongjie'
-alias suhui='cd /mnt/self-define/suhui'
-alias sunning='cd /mnt/self-define/sunning'
-alias yudingding='cd /mnt/self-define/yudingding'
-alias liyuanyuan='cd /mnt/self-define/liyuanyuan'
-alias wangzeyue='cd /mnt/self-define/wangzeyue'
-alias duchengyao='cd /mnt/self-define/duchengyao'
-alias wangfangyu='cd /mnt/self-define/wangfangyu'
-alias songquanheng='cd /mnt/self-define/songquanheng'
-alias chensi='cd /mnt/self-define/chensi'
-alias liuyiying='cd /mnt/self-define/liuyiying'
-alias yanjun='cd /mnt/self-define/yanjun'
-alias lihaiyan='cd /mnt/self-define/lihaiyan'
-alias model='if [ -d /public/model ]; then cd /public/model; else cd /mnt/nas_v1/common/public/model; fi'
-alias dataset='if [ -d /public/dataset ]; then cd /public/dataset; else cd /mnt/nas_v1/common/public/dataset; fi'
+#!/bin/bash
+
+# 用户名文件的路径（优先级：/mnt/nas_v1 > /public）
+if [ -f "/mnt/nas_v1/common/public/config/valid-names" ]; then
+    VALID_NAMES_FILE="/mnt/nas_v1/common/public/config/valid-names"
+elif [ -f "/public/config/valid-names" ]; then
+    VALID_NAMES_FILE="/public/config/valid-names"
+else
+    echo "Error: valid-names file not found in either /mnt/nas_v1/common/public/config or /public/config"
+    exit 1
+fi
+
+# 为每个用户名动态创建别名
+while IFS= read -r username; do
+    # 忽略空行和注释行
+    if [[ -n "$username" && ! "$username" =~ ^# ]]; then
+        alias "$username"="cd /mnt/self-define/$username"
+    fi
+done < "$VALID_NAMES_FILE"
+
+# 为 model 创建别名
+if [ -d "/public/model" ]; then
+    alias model="cd /public/model"
+elif [ -d "/mnt/nas_v1/common/public/model" ]; then
+    alias model="cd /mnt/nas_v1/common/public/model"
+else
+    echo "Warning: Neither /public/model nor /mnt/nas_v1/common/public/model exists. Skipping 'model' alias."
+fi
+
+# 为 dataset 创建别名
+if [ -d "/public/dataset" ]; then
+    alias dataset="cd /public/dataset"
+elif [ -d "/mnt/nas_v1/common/public/dataset" ]; then
+    alias dataset="cd /mnt/nas_v1/common/public/dataset"
+else
+    echo "Warning: Neither /public/dataset nor /mnt/nas_v1/common/public/dataset exists. Skipping 'dataset' alias."
+fi
+
+# 为 public 创建别名
+if [ -d "/public" ]; then
+    alias public="cd /public"
+elif [ -d "/mnt/nas_v1/common/public" ]; then
+    alias public="cd /mnt/nas_v1/common/public"
+else
+    echo "Warning: Neither /public nor /mnt/nas_v1/common/public exists. Skipping 'public' alias."
+fi
+
+# 为 config 创建别名
+if [ -d "/public/config" ]; then
+    alias config="cd /public/config"
+elif [ -d "/mnt/nas_v1/common/public/config" ]; then
+    alias config="cd /mnt/nas_v1/common/public/config"
+else
+    echo "Warning: Neither /public/config nor /mnt/nas_v1/common/public/config exists. Skipping 'config' alias."
+fi
+
+echo "Aliases have been loaded dynamically. Use them in this session."
 
