[MOD]add alias for shell

--- a/alias.env
+++ b/alias.env
@@ -54,5 +54,14 @@ else
     echo "Warning: Neither /public/config nor /mnt/nas_v1/common/public/config exists. Skipping 'config' alias."
 fi
 
+# 为shell创建别名
+if [ -d "/public/Shell" ]; then
+    alias shell="cd /public/Shell"
+elif [ -d "/mnt/nas_v1/common/public/Shell" ]; then
+    alias shell="cd /mnt/nas_v1/common/public/Shell"
+else
+    echo "Warning: Neither /public/Shell nor /mnt/nas_v1/common/public/Shell exists. Skipping 'shell' alias."
+fi
+
 echo "Aliases have been loaded dynamically. Use them in this session."
 
