[ADD]add alias fp which can print full path in current dir, inactive_images.sh which can print unused images

--- a/alias.env
+++ b/alias.env
@@ -62,6 +62,6 @@ elif [ -d "/mnt/nas_v1/common/public/Shell" ]; then
 else
     echo "Warning: Neither /public/Shell nor /mnt/nas_v1/common/public/Shell exists. Skipping 'shell' alias."
 fi
-
+alias fp='ls | xargs -I {} echo `pwd`/{}'
 echo "Aliases have been loaded dynamically. Use them in this session."
 
