[MOD]modify the code in aliaes.env to avoid the scp error

--- a/alias.env
+++ b/alias.env
@@ -63,5 +63,6 @@ else
     echo "Warning: Neither /public/Shell nor /mnt/nas_v1/common/public/Shell exists. Skipping 'shell' alias."
 fi
 alias fp='ls | xargs -I {} echo `pwd`/{}'
-echo "Aliases have been loaded dynamically. Use them in this session."
+# add this to avoid the scp error by zhangweixing
+#echo "Aliases have been loaded dynamically. Use them in this session."
 
