--- a/huggingface/model/021-32B/config.json
+++ b/huggingface/model/021-32B/config.json
@@ -46,8 +46,8 @@
     "type": "yarn"
   },
   "rope_theta": 10000,
-  "routed_scaling_factor": 2.643,
-  "scoring_func": "softmax",
+  "routed_scaling_factor": 1.0,
+  "scoring_func": "seq_aux_loss",
   "seq_aux": true,
   "tie_word_embeddings": false,
   "topk_group": 1,
