--- a/huggingface/model/021-32B/config.json
+++ b/huggingface/model/021-32B/config.json
@@ -46,15 +46,15 @@
     "type": "yarn"
   },
   "rope_theta": 10000,
-  "routed_scaling_factor": 1.0,
-  "scoring_func": "seq_aux_loss",
+  "routed_scaling_factor": 2.643,
+  "scoring_func": "softmax",
   "seq_aux": true,
   "tie_word_embeddings": false,
   "topk_group": 1,
   "topk_method": "greedy",
   "torch_dtype": "bfloat16",
   "transformers_version": "4.41.0",
-  "use_cache": true,
+  "use_cache": false,
   "v_head_dim": 128,
   "vocab_size": 128256
 }
